; ModuleID = '/home/carl/AnghaBench/lwan/src/samples/freegeoip/extr_freegeoip.c_create_query_limit.c'
source_filename = "/home/carl/AnghaBench/lwan/src/samples/freegeoip/extr_freegeoip.c_create_query_limit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cache_entry = type { i32 }
%struct.query_limit = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.cache_entry* (i8*, i8*)* @create_query_limit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.cache_entry* @create_query_limit(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.query_limit*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = call %struct.query_limit* @malloc(i32 8)
  store %struct.query_limit* %6, %struct.query_limit** %5, align 8
  %7 = load %struct.query_limit*, %struct.query_limit** %5, align 8
  %8 = call i64 @LIKELY(%struct.query_limit* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %2
  %11 = load %struct.query_limit*, %struct.query_limit** %5, align 8
  %12 = getelementptr inbounds %struct.query_limit, %struct.query_limit* %11, i32 0, i32 0
  store i64 0, i64* %12, align 8
  br label %13

13:                                               ; preds = %10, %2
  %14 = load %struct.query_limit*, %struct.query_limit** %5, align 8
  %15 = bitcast %struct.query_limit* %14 to %struct.cache_entry*
  ret %struct.cache_entry* %15
}

declare dso_local %struct.query_limit* @malloc(i32) #1

declare dso_local i64 @LIKELY(%struct.query_limit*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
